@@ -1,0 +1,4 @@
+DIST remmina-xfce-0.8.1.tar.gz 315578 RMD160 06cc2f3e43ba623e443c51de8e2dbda208cae9bd SHA1 461d697762dbd5f9f244160aedbdb77c510a1cbb SHA256 1c0332d8733f0d54d5f54cba0b844d41b1c6c9c8ba6023de83d22a00238e925d
+EBUILD remmina-xfce-0.8.1.ebuild 825 RMD160 075f27e8880fc2e5e45b31727a23791baea782a7 SHA1 31adfce860250d9f862a0d7f2644b287a6ceca63 SHA256 62012b3d317a1579f35b14bc6b9e19c39e35ed936accdaf55fca80a15c653395
+MISC ChangeLog 230 RMD160 2897c123a0346ba9807388b592a2198090659f14 SHA1 737d0c5b671b6e1622f73e0d266a681a00e04a47 SHA256 f2214a6888862b602d332fcdc38b6b93fed2fdee79252cf54cb6eb0e61a57945
+MISC metadata.xml 251 RMD160 2eea8f62f1265cf057f2a4677804f28633554c90 SHA1 b1a508110084fef607988307f5d4f1c95f5804a2 SHA256 01da6061e84876485bd50e0c79e371a5f9aada51158d3238fa784df2c7f89cd4
