@@ -1,4 +1,4 @@
-DIST remmina-0.8.2.tar.gz 342811 RMD160 2fd653b450b60224c3a824997458f21df74e5dc6 SHA1 cf4a1c332ea93558cb03c1bf229da2acb095e885 SHA256 e6179cc7da3dadff4b7ec3466a4836e0d82ac40a052ca3bce9df4766ae5027c5
-EBUILD remmina-0.8.2.ebuild 1382 RMD160 403471da64ca90d8e5927391180e6f0d1b752e9d SHA1 d9fa32c0249ad8d5598c8df1373b9331c6402bd3 SHA256 92494d3136707f05d381d81be28cef43db97b90ab1a129ebcad4d0908c24a70c
-MISC ChangeLog 220 RMD160 6412e042a76897b3e10821119de00cb849b67b96 SHA1 b12316f1a85dfcc51ba21780853e3920acd21d2c SHA256 d8ae569bffb7fe7c29a075bce18462d1134d593ca8c0e02ee9b30fa4962a15f7
+DIST remmina-0.8.3.tar.gz 347054 RMD160 963f558d916664d03e90fe0f41261a092c9fe688 SHA1 21b08631018998d7740a10f408938551758cdc92 SHA256 5c196f0b279399576b14f7d8b6ac9a72d3be327ef01a5fb9741c35fbc0f29afd
+EBUILD remmina-0.8.3.ebuild 1382 RMD160 403471da64ca90d8e5927391180e6f0d1b752e9d SHA1 d9fa32c0249ad8d5598c8df1373b9331c6402bd3 SHA256 92494d3136707f05d381d81be28cef43db97b90ab1a129ebcad4d0908c24a70c
+MISC ChangeLog 327 RMD160 4e230cac44e43572fa24eb499fb54a4fca9ab1ad SHA1 cc49f766da6b20e17d122e943fa7970856e67c60 SHA256 4577c333daa5c1e12383c66c5695d34963fa759f6f82f4cf41862bdc63b52ac0
 MISC metadata.xml 528 RMD160 352bf30df4d8740ac4c62ba554fedf8eaffec42f SHA1 bbb6a010b4db72d567787005de5cfcd0bf76217c SHA256 46011a9c011c0d53a9d9094dd219a55ab715faecd83f3c172129ac311d7fb69b
