@@ -1,0 +1,8 @@
+# ChangeLog for net-misc/remmina-xfce
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+  18 Oct 2010; Rion <rion4ik@notagmail.com> +remmina-xfce-0.8.1.ebuild,
+  +metadata.xml:
+  initial version
+
