@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Oct 2010; Rion <rion4ik@notagmail.com> -remmina-0.8.2.ebuild,
+  +remmina-0.8.3.ebuild:
+  new version
+
   20 Sep 2010; Rion <rion4ik@notagmail.com> +remmina-0.8.2.ebuild,
   +metadata.xml:
   initial version
